# autograd-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cc  main.cpp  run_tests.sh
include/ag/: allocator.hh  allocator.hpp  storage.hh  storage.hpp  tensor.hh  tensor.hpp
notes/: implementation_plan.md  installation.md  task.md
src/: allocator.cc  storage.cc  storage.cpp  tensor.cc  tensor.cpp
tests/: test_tensor.cpp
